--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:id="@+id/layoutVert"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#BEFFE57F"
+            android:background="@color/colorBackgroundPrimary"
             android:fadeScrollbars="true"
             android:orientation="vertical"
             android:visibility="visible"
@@ -40,7 +40,7 @@
                 android:singleLine="true"
                 android:text="Bem-Vindo!"
                 android:textAlignment="center"
-                android:textColor="#FF80AB"
+                android:textColor="@color/colorTextPrimary"
                 android:textSize="30sp"
                 android:typeface="normal"
                 android:visibility="visible"
@@ -58,7 +58,7 @@
                 android:text="Reservar"
                 android:textAlignment="center"
                 android:textAllCaps="false"
-                android:textColor="#FF80AB"
+                android:textColor="@color/colorTextPrimary"
                 android:textSize="30sp"
                 android:typeface="monospace"
                 android:visibility="visible" />
@@ -90,7 +90,7 @@
                         android:scrollbarAlwaysDrawHorizontalTrack="true"
                         android:scrollHorizontally="true"
                         android:text="Apto 01"
-                        android:textColor="#FF80AB"
+                        android:textColor="@color/colorTextPrimary"
                         android:textSize="18sp" />
 
                     <Button
@@ -105,7 +105,7 @@
                         android:scrollbarAlwaysDrawHorizontalTrack="false"
                         android:scrollbarAlwaysDrawVerticalTrack="false"
                         android:text="Apto 02"
-                        android:textColor="#FF80AB"
+                        android:textColor="@color/colorTextPrimary"
                         android:textSize="18sp" />
                 </LinearLayout>
             </HorizontalScrollView>
