--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -71,12 +71,14 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
                     android:background="#FCE99F"
+                    android:outlineAmbientShadowColor="#000000"
+                    android:outlineSpotShadowColor="#000000"
                     android:padding="10dp"
                     android:clipChildren="true"
                     android:clipToPadding="true"
                     android:visibility="visible">
 
-                    <android.support.v7.widget.LinearLayoutCompat
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
@@ -118,7 +120,7 @@
                             android:text="Dupla"
                             android:textColor="@color/colorTextPrimary"
                             android:textSize="18sp" />
-                    </android.support.v7.widget.LinearLayoutCompat>
+                    </LinearLayout>
                 </HorizontalScrollView>
 
                 <TextView
