--- a/app/src/main/res/layout/activity_apto.xml
+++ b/app/src/main/res/layout/activity_apto.xml
@@ -27,7 +27,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
-                    android:background="#CCFF90"
+                    android:background="@color/colorPrimaryLight"
                     android:gravity="start"
                     android:orientation="vertical">
 
@@ -51,14 +51,9 @@
                 <TableRow
                     android:id="@+id/tbRow02"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="4dp">
+                    android:layout_height="100dp"
+                    android:padding="10dp">
 
-                    <android.support.v4.view.ViewPager
-                        android:id="@+id/pgrView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
                 </TableRow>
 
                 <TableRow
@@ -68,16 +63,18 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:visibility="visible">
 
-                    <android.widget.ImageView
-                        android:id="@+id/imgView01"
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/pgrView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="500dp"
                         android:layout_weight="1"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ap01_194875836" />
+                        android:padding="20dp"
+                        android:visibility="visible">
+
+                    </android.support.v4.view.ViewPager>
                 </TableRow>
 
             </TableLayout>
