--- a/app/src/main/res/layout/activity_apto02.xml
+++ b/app/src/main/res/layout/activity_apto02.xml
@@ -27,7 +27,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
-                    android:background="#CCFF90"
+                    android:background="@color/colorPrimaryLight"
                     android:gravity="start"
                     android:orientation="vertical">
 
@@ -51,15 +51,9 @@
                 <TableRow
                     android:id="@+id/tbRow02"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="4dp">
+                    android:layout_height="100dp"
+                    android:padding="10dp">
 
-                    <android.support.v4.view.ViewPager
-                        android:id="@+id/pgrSlide"
-                        android:layout_width="match_parent"
-                        android:layout_height="90dp"
-                        android:layout_weight="1" />
                 </TableRow>
 
                 <TableRow
@@ -71,14 +65,15 @@
                     android:layout_weight="1"
                     android:visibility="visible">
 
-                    <android.widget.ImageView
-                        android:id="@+id/imgView01"
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/pgrView02"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="500dp"
                         android:layout_weight="1"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ap02_194875860" />
+                        android:padding="20dp"
+                        android:visibility="visible" />
+
+
                 </TableRow>
 
             </TableLayout>
