--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,11 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryLight">#00BFA5</color>
+    <color name="colorAccent">#FF80AB</color>
     <color name="colorBackgroundPrimary">#BEFFE57F</color>
     <color name="colorTextPrimary">#FF80AB</color>
+    <color name="white">#FFFFFF</color>
+
 
 </resources>
