--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundPrimary"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -148,7 +148,6 @@
                     android:typeface="monospace" />
 
                 <FrameLayout
-                    android:id="@+id/container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/colorTextPrimary"
@@ -159,14 +158,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginStart="0dp"
                     android:animateLayoutChanges="true"
                     android:background="#FCE99F"
                     app:itemIconTint="@color/colorTextPrimary"
                     app:itemTextColor="@color/colorTextPrimary"
-                    app:labelVisibilityMode="labeled"
-                    app:menu="@menu/bottom_nav"
-                    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-                    tools:visibility="visible" />
+                    app:menu="@menu/bottom_nav"/>
 
             </LinearLayout>
         </ScrollView>
