--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -4,13 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.BuscarReservaActivity"
-
-    >
-
-    <ListView
-        android:id="@+id/list_Busca"
+    tools:context=".view.PerfilActivity">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:background="@color/colorBackgroundPrimary"
+        ></LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
