--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -30,7 +30,7 @@
 
             <EditText
                 android:id="@+id/editTextChegada"
-                android:layout_width="250dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="false"
                 android:gravity="center"
@@ -52,7 +52,7 @@
 
             <EditText
                 android:id="@+id/editTextSaida"
-                android:layout_width="250dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
                 android:enabled="false"
