--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="colorBackgroundPrimary">#BEFFE57F</color>
     <color name="colorTextPrimary">#FF80AB</color>
     <color name="white">#FFFFFF</color>
+    <color name="gray">#32FFFFFF</color>
+    <color name="red">#FF5252</color>
 
 
 </resources>
